; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_setpos.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngfix.c_setpos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chunk = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.chunk*)* @setpos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setpos(%struct.chunk* %0) #0 {
  %2 = alloca %struct.chunk*, align 8
  store %struct.chunk* %0, %struct.chunk** %2, align 8
  %3 = load %struct.chunk*, %struct.chunk** %2, align 8
  %4 = getelementptr inbounds %struct.chunk, %struct.chunk* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32 8, i32* %6, align 4
  %7 = load %struct.chunk*, %struct.chunk** %2, align 8
  %8 = getelementptr inbounds %struct.chunk, %struct.chunk* %7, i32 0, i32 1
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = load %struct.chunk*, %struct.chunk** %2, align 8
  %11 = getelementptr inbounds %struct.chunk, %struct.chunk* %10, i32 0, i32 0
  %12 = call i32 @file_setpos(%struct.TYPE_2__* %9, i32* %11)
  ret void
}

declare dso_local i32 @file_setpos(%struct.TYPE_2__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
